--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -8,6 +8,23 @@
     <title>Spring Pet Clinic - List of Owners</title>
 </head>
 <body>
-    <h1 th:text="'List of Owners'">List of Owners...</h1>
+<h1 th:text="'List of Owners'">List of Owners...</h1>
+
+<table>
+    <thead>
+    <tr>
+        <td>Id</td>
+        <td>First Name</td>
+        <td>Last Name</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="owner : ${owners}">
+        <td th:text="${owner?.id}">ID</td>
+        <td th:text="${owner?.firstName}">Random</td>
+        <td th:text="${owner?.lastName}">String</td>
+    </tr>
+    </tbody>
+</table>
 </body>
 </html>
