--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
     <h1 th:text="'List of Vets'">List of Vets...</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <td>Id</td>
+            <td>First Name</td>
+            <td>Last Name</td>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="vet : ${vets}">
+            <td th:text="${vet?.id}">ID</td>
+            <td th:text="${vet?.firstName}">Random</td>
+            <td th:text="${vet?.lastName}">String</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
