--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,9 +8,9 @@
     <title>Spring Pet Clinic - List of Vets</title>
 </head>
 <body>
-    <h1 th:text="'List of Vets'">List of Vets...</h1>
+    <h2 th:text="'List of Vets'">List of Vets...</h2>
 
-    <table>
+    <table id="vets" class="table table-striped">
         <thead>
         <tr>
             <td>Id</td>
